# Rhizome-thinking

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LLM_SEARCH_TEST_REPORT.md  README.md  STAGE1_VERIFICATION.md  STAGE2_IMPLEMENTATION.md  TEST_REPORT.md  docker-compose.yml  implementation_plan.md  install.sh  knowledge_base_design.md  minimax文档.txt  pyproject.toml  test_backup_api.py  test_backup_full.py  test_llm_search.py  test_search_modes.py
.trae/documents/: deployment_plan.md  fix_llm_search_bug_plan.md  fix_llm_search_plan.md  search_fix_summary.md  search_fix_v2_summary.md  search_quality_diagnosis_plan.md  完善功能实施计划.md
design-preview/: constructivism-preview.html  constructivism-v2.html  styles-preview.html
scripts/: batch_extract_themes.py  check_server.py  clear_and_import.py  deploy.ps1  deploy.sh  extract_remaining_themes.py  extract_themes.py  generate_themes.py  import_sync.py  import_with_llm.py  install-service.sh  parallel_import.py  quick_generate_themes.py  rebuild_indexes.py  release-stable.sh  rhizome.service  setup.ps1  setup_tunnel.ps1  simple_import.py
src/rhizome/: __init__.py  __main__.py  cli.py  config.py
src/rhizome/api/: __init__.py  dependencies.py  main.py
src/rhizome/api/routes/: backup.py  (+14 more)
src/rhizome/core/: __init__.py  backup_manager.py  events.py  evolution_store.py  llm_client.py  llm_processor.py  models.py  node_store.py  relationship_manager.py  relationship_models.py  relationship_store.py  scheduler.py  source_config.py  theme_evolution.py  theme_extractor.py  theme_models.py  theme_store.py  update_manager.py
src/rhizome/retrieval/: __init__.py  llm_search.py  query_engine.py  search_optimizer.py  vector_store.py
src/rhizome/web/: __init__.py
tests/: __init__.py  test_llm_processor.py  test_models.py  test_node_store.py  test_query_engine.py
(+24 files in other folders)
